Added peertube and jupitergaming

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -168,7 +168,7 @@ jb.realname = "Eric"
 jb.local_hostname
 jb.command = "/msg nickserv identify J@m3sC0nw@y"
 jb.command_delay
-jb.autojoin = "#jupiterbroadcasting"
+jb.autojoin = "#jupiterbroadcasting,#jupitergaming"
 jb.autorejoin
 jb.autorejoin_delay
 jb.connection_timeout
@@ -180,6 +180,9 @@ jb.default_msg_kick
 jb.default_msg_part
 jb.default_msg_quit
 jb.notify
+
+#####################
+
 salt.addresses = "chat.freenode.net"
 salt.proxy
 salt.ipv6
@@ -207,7 +210,7 @@ salt.realname = "Eric"
 salt.local_hostname
 salt.command = "/msg nickserv identify J@m3sC0nw@y"
 salt.command_delay
-salt.autojoin = "#salt"
+salt.autojoin = "#salt,#peertube"
 salt.autorejoin
 salt.autorejoin_delay
 salt.connection_timeout
