Added GNOME IRC

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -180,9 +180,6 @@ jb.default_msg_kick
 jb.default_msg_part
 jb.default_msg_quit
 jb.notify
-
-#####################
-
 salt.addresses = "chat.freenode.net"
 salt.proxy
 salt.ipv6
@@ -222,3 +219,42 @@ salt.default_msg_kick
 salt.default_msg_part
 salt.default_msg_quit
 salt.notify
+gnome.addresses = "irc.gnome.org"
+gnome.proxy
+gnome.ipv6
+gnome.ssl
+gnome.ssl_cert
+gnome.ssl_priorities
+gnome.ssl_dhkey_size
+gnome.ssl_fingerprint
+gnome.ssl_verify
+gnome.password
+gnome.capabilities
+gnome.sasl_mechanism
+gnome.sasl_username
+gnome.sasl_password
+gnome.sasl_key
+gnome.sasl_timeout
+gnome.sasl_fail
+gnome.autoconnect = on
+gnome.autoreconnect
+gnome.autoreconnect_delay
+gnome.nicks = "Eric_TheITGuy"
+gnome.nicks_alternate
+gnome.username
+gnome.realname = "Eric"
+gnome.local_hostname
+gnome.command = "/msg nickserv identify ZKMl=3qVo9=U9EV2"
+gnome.command_delay
+gnome.autojoin = "#gnome,#foundation,#newcomers,#engagement"
+gnome.autorejoin
+gnome.autorejoin_delay
+gnome.connection_timeout
+gnome.anti_flood_prio_high
+gnome.anti_flood_prio_low
+gnome.away_check
+gnome.away_check_max_nicks
+gnome.default_msg_kick
+gnome.default_msg_part
+gnome.default_msg_quit
+gnome.notify
